@@ -1,3 +1,6 @@
+2012-07-20
+		* make.mdt can now handle a matrix or data.frame, updated .Rd file
+
 2012-07-18
 		* disabled examples for the gen.data examples (gen.data.Rd)
 
